syntax = "proto3";

package birdservice;
option go_package = "./birdservice";

message BirdAddReq {
  string BirdName = 1;
  int64 BirdType = 2;
  string Description = 3;
  string PicUrl = 4;
}

message BirdAddResp {
  int64 BirdID = 1;
}

message BirdUpdateReq {
  int64 BirdID = 1;
  string BirdName = 2;
  int64 BirdType = 3;
  string Description = 4;
  string PicUrl = 5;
}
message BirdUpdateResp {
  int64 BirdID = 1;
}

message BirdListReq {
  int64 Page = 1;
  int64 PageSize = 2;
  int64 BirdType = 3;
}
message BirdListResp {
  repeated  BirdListData list = 1;
}
message BirdListData {
  int64 BirdID = 1;
  string BirdName = 2;
  int64 BirdType = 3;
  string Description = 4;
  string PicUrl = 5;
}


message BirdInfoReq {
  int64 BirdID = 1;
}
message BirdInfoResp {
  int64 BirdID = 1;
  string BirdName = 2;
  int64 BirdType = 3;
  string Description = 4;
  string PicUrl = 5;
}

message BirdDeleteReq {
  int64 BirdID = 1;
}
message BirdDeleteResp {
  int64 BirdID = 1;
}
service Bird {
  rpc BirdAdd (BirdAddReq) returns (BirdAddResp) ;
  rpc BirdUpdate (BirdUpdateReq) returns (BirdUpdateResp) ;
  rpc BirdList (BirdListReq) returns (BirdListResp) ;
  rpc BirdInfo (BirdInfoReq) returns (BirdInfoResp) ;
  rpc BirdDelete (BirdDeleteReq) returns (BirdDeleteResp) ;
}

// goctl rpc protoc bird.proto --go_out=./pb --go-grpc_out=./pb --zrpc_out=. -m